# qkdpy

./: .buildinfo  .buildinfo.bak  .coverage  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL_NOTICE.md  CONTRIBUTING.md  CRUSH.md  ENHANCEMENT_PLAN.md  LICENSE  Makefile  README.md  README.qpiai-qkd.md  RELEASE.md  RELEASE_v080.md  SECURITY.md  TEST_RESULTS_COMPREHENSIVE.txt  V080_IMPLEMENTATION_SUMMARY.md  __init__.py  api.html  audit_qiskit.md  audit_qpiai.md  commit_message.txt  comparison_pennylane.md  comparison_qiskit.md  comparison_qpiai.md  compile_comprehensive_report.py  compile_results.py  coverage.xml  examples.html  genindex.html  index.html  installation.html  objects.inv  package-lock.json  py-modindex.html  (+21 more)
.doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree
.doctrees/decisions/: ADR-001-product-tier-licensing.doctree  ADR-002-observability-and-instrumentation.doctree  ADR-003-compliance-architecture.doctree  ADR-004-enterprise-hsm-is-software-simulation.doctree
.doctrees/diagrams/: 01-high-level-architecture.doctree  02-protocol-execution-flow.doctree  03-core-quantum-stack.doctree  04-key-management-pipeline.doctree  05-network-satellite-qkd.doctree  06-integration-layer.doctree  07-crypto-enterprise.doctree  08-ml-optimization.doctree  09-data-flow.doctree  10-api-surface.doctree
.doctrees/source/: benchmarks.doctree  index.doctree  installation.doctree
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml
02-research/: competitive-teardown.md  deep_research.py  deep_research_phase2.py  exa-deep-research.json  exa-research-output.json  strategic-synthesis.md
02-research/deep-dives/: 01_ml_qkd_research.py  01_ml_qkd_results.json  02_qkd_standards.py  02_standards_results.json  03_network_simulators.py  03_simulators_results.json  04_pqc_qkd_hybrid.py  04_pqc_qkd_results.json  05_sidechannel_attacks.py  05_sidechannel_results.json
_modules/: index.html  typing.html
_modules/qkdpy/: config.html  exceptions.html
_sources/: api.md.txt  examples.md.txt  index.md.txt  installation.md.txt  quickstart.md.txt
_sources/decisions/: ADR-001-product-tier-licensing.md.txt  ADR-002-observability-and-instrumentation.md.txt  ADR-003-compliance-architecture.md.txt  ADR-004-enterprise-hsm-is-software-simulation.md.txt
_sources/diagrams/: 01-high-level-architecture.md.txt  02-protocol-execution-flow.md.txt  03-core-quantum-stack.md.txt  04-key-management-pipeline.md.txt  05-network-satellite-qkd.md.txt  06-integration-layer.md.txt  07-crypto-enterprise.md.txt  08-ml-optimization.md.txt  09-data-flow.md.txt  10-api-surface.md.txt
_sources/source/: api_reference.rst.txt  benchmarks.rst.txt  index.rst.txt  installation.rst.txt
audit-comparisons/: audit_pennylane.md  audit_qpiai.md  comparison_qpiai.md
benchmarks/: __init__.py  ml_vs_bruteforce.py
decisions/: ADR-001-product-tier-licensing.html  ADR-002-observability-and-instrumentation.html  ADR-003-compliance-architecture.html  ADR-004-enterprise-hsm-is-software-simulation.html
diagrams/: 01-high-level-architecture.html  02-protocol-execution-flow.html  03-core-quantum-stack.html  04-key-management-pipeline.html  05-network-satellite-qkd.html  06-integration-layer.html  07-crypto-enterprise.html  08-ml-optimization.html  09-data-flow.html  10-api-surface.html
docs/: Makefile  NEXT_STEPS.md  OPEN_CORE.md  api.md  conf.py  examples.md  index.md  installation.md  public-capabilities.md  public-roadmap.md  quickstart.md
docs/adr_public/: ADR-Public-01-product-tiers.md  ADR-Public-02-observability.md  ROADMAP-Public.md
docs/decisions/: ADR-001-product-tier-licensing.md  ADR-002-observability-and-instrumentation.md  ADR-003-compliance-architecture.md  ADR-005-core-quantum-simulation-stack.md  ADR-006-protocol-execution-model.md
docs/diagrams/: 01-high-level-architecture.md  02-protocol-execution-flow.md  03-core-quantum-stack.md  04-key-management-pipeline.md  05-network-satellite-qkd.md  06-integration-layer.md  07-crypto-enterprise.md  08-ml-optimization.md  09-data-flow.md  10-api-surface.md
docs/source/: api_reference.rst  benchmarks.rst  conf.py  index.rst  installation.rst
examples/: README.md  __init__.py  advanced_key_management_example.py  advanced_protocols_example.py  advanced_visualization_example.py  b92_example.py  bb84_example.py  core_features_example.py  educational_demo.py  encryption_example.py  enhanced_security_example.py  enterprise_demo.py  full_qkd_scenario.py  hd_qkd_example.py  key_management_example.py  ml_integration.py  network_simulation.py  protocol_comparison.py  protocols_example.py  qkdpy_tutorial.ipynb  quantum_cryptography_example.py  quantum_network_example.py  satellite_qkd_demo.py  v080_features_showcase.py
scripts/blackbox/: test_all_protocols.py  test_analysis.py  test_blackbox.py  test_core_stack.py  test_crypto_enterprise.py  test_integrations.py  test_key_management.py  (+3 more)
source/: api_reference.html  benchmarks.html  index.html  installation.html
tests/: __init__.py  benchmark_cv_qkd.py  benchmark_di_qkd.py  benchmark_e91.py  benchmark_sarg04.py  system_test_protocols.py  test_advanced_crypto.py  test_advanced_error_correction.py  test_advanced_privacy_amplification.py  test_advanced_quantum_visualization.py  test_advanced_visualization.py  test_api_verification.py  test_b92.py  test_circuit.py  test_cirq_integration_extended.py  test_config.py  test_core_extended.py  test_cptp_channels.py  test_crypto.py  test_crypto_coverage.py  test_csprng_usage.py  test_cv_qkd.py  test_decoy_state_bb84.py  test_density_matrix.py  test_detector.py  test_di_qkd.py  test_e91.py  test_efficient_models.py  test_enhanced_cv_qkd.py  test_enhanced_functionality.py  test_enhanced_ml.py  test_enterprise.py  test_enterprise_compliance.py  test_enterprise_licensing.py  test_enterprise_quantum_safe.py  test_error_correction.py  test_exceptions.py  test_exploratory.py  test_extended_channels_coverage.py  test_finite_key.py  (+45 more)
(+171 files in other folders)
