[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qkdpy"
version = "0.6.6"
description = "A Python Package for Quantum Key Distribution"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Pranava-Kumar", email = "pranavakumar.it@gmail.com"},
]
maintainers = [
    {name = "Pranava-Kumar", email = "pranavakumar.it@gmail.com"},
]
keywords = [
    "quantum",
    "cryptography",
    "qkd",
    "simulation",
    "hd-qkd",
    "quantum-networks",
    "quantum-computing",
    "cybersecurity",
    "post-quantum",
    "quantum-key-distribution",
    "bb84",
    "e91",
    "cv-qkd",
    "quantum-internet",
    "network-security"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Framework :: Pytest",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "structlog>=23.0.0",
    "colorama>=0.4.6; sys_platform == 'win32'",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=25.1.0",
    "bandit>=1.8.6",
    "mypy>=1.17.1",
    "ruff>=0.12.8",
    "isort>=6.0.1",
    "hatchling>=1.27.0",
    "pre-commit>=3.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "twine>=4.0.0",
    "build>=0.10.0",
]
ml = [
    "pandas>=2.3.1",
    "scikit-learn>=1.3.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
    "sphinxcontrib-mermaid>=0.9.2",
]
viz = [
    "seaborn>=0.12.0",
]
enterprise = [
    "python-pkcs11>=0.9.0",
]
cirq = [
    "cirq>=1.3.0",
]
pennylane = [
    "pennylane>=0.35.0",
]
qiskit = [
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
]
qpiai = [
    "qpiai-quantum>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Pranava-Kumar/qkdpy"
Repository = "https://github.com/Pranava-Kumar/qkdpy"
"Bug Tracker" = "https://github.com/Pranava-Kumar/qkdpy/issues"

# This is the KEY fix - explicitly specify that only qkdpy should be packaged
[tool.setuptools.packages.find]
where = ["src"]  # Look in the src directory
include = ["qkdpy", "qkdpy.*"]  # Include qkdpy and all its subpackages
exclude = ["docs*", "tests*", "examples*"]  # Exclude these from packaging

# Rest of your tool configurations...
[tool.ruff]
line-length = 88
target-version = "py311"
include = ["*.py", "*.pyi"]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

# Root-level diagnostic / blackbox scripts are stand-alone, introduce
# sys.path hacks to find the package, and use `for trial in range(n)`-style
# loop scaffolding. Allow E402 (imports after path-hack) and B007 (unused
# loop control variable used as a counter). They are not part of the test
# suite discovered by pytest, just human-runnable inspection scripts.
[tool.ruff.lint.per-file-ignores]
"scripts/blackbox/test_analysis.py" = ["E402", "B007", "B905"]
"scripts/blackbox/test_blackbox.py" = ["E402", "B007", "B905"]
"scripts/blackbox/test_all_protocols.py" = ["E402", "B007", "B905"]
"scripts/blackbox/test_core_stack.py" = ["E402", "B007", "B905"]
"scripts/blackbox/test_crypto_enterprise.py" = ["E402", "B007", "B905"]
"scripts/blackbox/test_integrations.py" = ["E402", "B007", "B905", "C408"]
"scripts/blackbox/test_key_management.py" = ["E402", "B007", "B905"]
"scripts/blackbox/test_ml_module.py" = ["E402", "B007", "B905"]
"scripts/blackbox/test_network.py" = ["E402", "B007", "B905", "E741"]
"scripts/blackbox/test_utils_api.py" = ["E402", "B007", "B905"]
"benchmarks/*" = ["E402", "B007", "B905", "E741"]
"compile_results.py" = ["E402", "B007", "B905", "E741"]
"compile_comprehensive_report.py" = ["E402", "B007", "B905", "E741"]

[tool.ruff.lint.isort]
known-first-party = ["qkdpy"]

# isort config (read by both `pre-commit run isort` and `ruff check --fix`
# when present in the isort namespace). These keys align isort v8 with
# black's wrapping so long `from qkdpy.exceptions import (...)` statements
# stop oscillating between the two formatters.
[tool.isort]
known_first_party = ["qkdpy"]
# force_grid_wrap=3 forces wrapping when an import otherwise exceeds the
# line length, matching black's parenthesized-wrap behaviour for long
# `from x import (...)` statements.
force_grid_wrap = 3
split_on_trailing_comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ignore specific files with visualization issues
[[tool.mypy.overrides]]
module = [
    "qkdpy.utils.visualization",
    "qkdpy.utils.advanced_visualization"
]
ignore_errors = true

# Ignore missing imports for external libraries
[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "numpy.*",
    "scipy.*",
    "mpl_toolkits.*",
    "sklearn.*",
    "seaborn.*",
    "qiskit.*",
    "qiskit_aer.*",
    "pennylane.*",
    "cirq.*",
    "networkx.*",
    "qpiai_quantum.*",
    "pkcs11",
    "psutil",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["qkdpy"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.mutmut]
paths_to_exclude = ["tests/"]
source_paths = [
    "src/qkdpy/core/secure_random.py",
    "src/qkdpy/key_management/advanced_privacy_amplification.py",
    "src/qkdpy/key_management/key_distillation.py",
    "src/qkdpy/enterprise/hsm_interface.py",
    "src/qkdpy/enterprise/audit.py",
]
runner = "pytest -q --tb=short -x -c /dev/null --no-header -p no:cacheprovider --ignore-glob=*advanced_crypto* {directory}/test_secure_rng_usage.py {directory}/test_csprng_usage.py {directory}/test_quantum_rng.py {directory}/test_advanced_privacy_amplification.py {directory}/test_key_distillation.py {directory}/test_enterprise.py {directory}/test_enterprise_compliance.py {directory}/test_enterprise_quantum_safe.py {directory}/test_security_comprehensive.py {directory}/test_quantum_auth.py {directory}/test_security_analysis_coverage.py"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
